[gd_scene load_steps=7 format=3 uid="uid://xh1u1wnfknx4"]

[ext_resource type="Script" path="res://Doctor/DoctorEndingBad.gd" id="1_2e3ob"]
[ext_resource type="Texture2D" uid="uid://6xvv7xfe1mra" path="res://assets/Misc/PatchRegular.png" id="4_emqte"]
[ext_resource type="FontFile" uid="uid://dcxo6ll4nfsfh" path="res://assets/MS Sans Serif 8pt.ttf" id="4_ugruo"]
[ext_resource type="Texture2D" uid="uid://caowl4456vs88" path="res://assets/Misc/PatchInverted.png" id="5_ej13g"]
[ext_resource type="FontFile" uid="uid://bb36i8qiqdl26" path="res://assets/Misc/Adventurer.ttf" id="6_hk3gf"]
[ext_resource type="Texture2D" uid="uid://dsdlx8wiorvdq" path="res://assets/Doctor/Doctor.png" id="8_epatm"]

[node name="DialogueScene" type="Node2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_2e3ob")

[node name="NPC" type="TextureRect" parent="."]
offset_left = 12.0
offset_top = -51.0
offset_right = 1670.0
offset_bottom = 2258.0
texture = ExtResource("8_epatm")

[node name="NPCText" type="TextureRect" parent="."]
offset_left = 1729.0
offset_top = -50.0
offset_right = 3316.0
offset_bottom = 1395.0
texture = ExtResource("4_emqte")

[node name="RichTextLabel" type="RichTextLabel" parent="NPCText"]
layout_mode = 0
offset_left = 144.0
offset_top = 165.0
offset_right = 1450.0
offset_bottom = 1295.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_ugruo")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true

[node name="Advance" type="TextureButton" parent="."]
offset_left = 1733.0
offset_top = 1645.0
offset_right = 3327.0
offset_bottom = 2260.0
texture_normal = ExtResource("4_emqte")
texture_pressed = ExtResource("5_ej13g")
texture_hover = ExtResource("5_ej13g")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Advance"]
layout_mode = 0
offset_left = 141.0
offset_top = 95.0
offset_right = 1454.0
offset_bottom = 525.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_ugruo")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[wave][center]Close[/center][/wave]"

[node name="InspectEye" type="TextureButton" parent="."]
visible = false
offset_left = 2021.0
offset_top = 1381.0
offset_right = 3079.0
offset_bottom = 1568.0
texture_normal = ExtResource("4_emqte")
texture_pressed = ExtResource("5_ej13g")
texture_hover = ExtResource("5_ej13g")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="InspectEye"]
layout_mode = 0
offset_left = -3.0
offset_top = 20.0
offset_right = 1053.0
offset_bottom = 175.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hk3gf")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Inspect eye[/center]"

[node name="InspectVein" type="TextureButton" parent="."]
visible = false
offset_left = 2016.0
offset_top = 1692.0
offset_right = 3074.0
offset_bottom = 1886.0
texture_normal = ExtResource("4_emqte")
texture_pressed = ExtResource("5_ej13g")
texture_hover = ExtResource("5_ej13g")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="InspectVein"]
layout_mode = 0
offset_left = -3.0
offset_top = 20.0
offset_right = 1053.0
offset_bottom = 175.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hk3gf")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Inspect veins[/center]"

[node name="Reject" type="TextureButton" parent="."]
visible = false
offset_left = 2872.0
offset_top = 2093.0
offset_right = 3349.0
offset_bottom = 2259.0
texture_normal = ExtResource("4_emqte")
texture_pressed = ExtResource("5_ej13g")
texture_hover = ExtResource("5_ej13g")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Reject"]
layout_mode = 0
offset_left = 1.0
offset_top = 18.0
offset_right = 474.0
offset_bottom = 162.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hk3gf")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Reject[/center]"

[node name="Accept" type="TextureButton" parent="."]
visible = false
offset_left = 1736.0
offset_top = 2093.0
offset_right = 2225.0
offset_bottom = 2259.0
texture_normal = ExtResource("4_emqte")
texture_pressed = ExtResource("5_ej13g")
texture_hover = ExtResource("5_ej13g")
ignore_texture_size = true
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Accept"]
layout_mode = 0
offset_left = 13.0
offset_top = 18.0
offset_right = 474.0
offset_bottom = 162.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hk3gf")
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center]Accept[/center]"

[connection signal="pressed" from="Advance" to="." method="_on_advance_pressed"]
[connection signal="pressed" from="InspectEye" to="." method="_on_inspect_bandaged_eye_pressed"]
[connection signal="pressed" from="InspectVein" to="." method="_on_inspect_bandaged_vein_pressed"]
[connection signal="pressed" from="Reject" to="." method="_on_reject_pressed"]
[connection signal="pressed" from="Accept" to="." method="_on_accept_pressed"]
